--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,9 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: '>=3.4.0 <4.0.0'
+  
+
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,13 +32,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.0.5
+  firebase_core: ^2.22.0
+  firebase_auth: ^4.12.0
+  firebase_storage: ^11.3.0
+  cloud_firestore: ^5.14.0
+  image_picker: ^0.9.1+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  http: ^1.6.0
-  cloud_firestore: ^6.1.0
-  image_picker: ^1.2.1
+  http:  ^1.2.0
+  
+  
 
 dev_dependencies:
   flutter_test:
